Fixed bug with not showing tabs because config was empty.

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
 	<table id="items" class="table table-hover">
 	<thead>
 	<tr>
-		<th>Name</th>
-		<th>Quantity</th>
-		<th>Market</th>
-		<th>Sell</th>
+		<th width="0%"><input type="checkbox" id="checkall"></th>
+		<th width="80%">Name</th>
+		<th width="10%">Market</th>
+		<th width="10%">Sell</th>
 	</tr>
 	<tr>
 		<th colspan="4">
