--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+	<meta charset="utf-8"/>
 	<title>PoE Dex</title>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -73,9 +74,9 @@
 	<thead>
 	<tr>
 		<th width="0%"><input type="checkbox" id="checkall"></th>
-		<th width="80%">Name</th>
-		<th width="10%">Market</th>
-		<th width="10%">Sell</th>
+		<th width="60%">Name</th>
+		<th width="20%">Market</th>
+		<th width="20%">Sell</th>
 	</tr>
 	<tr>
 		<th colspan="4">
