Set Standard league as default selected league
This change fixed a bug where a request loop occurred, constantly failing and retrying requests to pathofexile.com.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<select id="league" class="form-control">
 				<option value="Tempest">Tempest</option>
 				<option value="Warbands">Warbands</option>
-				<option value="Standard">Standard</option>
+				<option value="Standard" selected="selected">Standard</option>
 				<option value="Hardcore">Hardcore</option>
 			</select>
 			<span class="help-block">Which league you want to load stash items for</span>
