Some work for forum thread management.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			Refresh
 		</button>
 
-		<button class="btn btn-default">
+		<button class="btn btn-default" id="publish">
 			<span class="glyphicon glyphicon-upload"></span>
 			Publish
 		</button>
