Added forum thread publishing.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
 	</div>
 
 	<div class="form-group">
+		<label class="col-md-4 control-label" for="template">Template</label>
+		<div class="col-md-4">
+			<textarea id="template" class="form-control input-md"></textarea>
+			<span class="help-block">
+				Template for your forum thread. Use <code>[items]</code> to include
+				a list of items.
+			</span>
+		</div>
+	</div>
+
+	<div class="form-group">
 		<label class="col-md-4 control-label" for="autorefresh">Auto Refresh</label>
 		<div class="col-md-4">
 			<select id="autorefresh" class="form-control">
