Disabled dev toolbar and added buttons for to open debugger.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
 	</p>
 
 	<div id="config" class="well collapse">
+
+	<div>
+		<button class="btn btn-warning" id="reload">
+			Reload App
+		</button>
+
+		<button class="btn btn-warning" id="debug">
+			Debug
+		</button>
+	</div>
+
 	<form class="form-horizontal">
 	<fieldset>
 
