--- a/index.html
+++ b/index.html
@@ -89,6 +89,35 @@
 	</div>
 
 	<div class="form-group">
+		<label class="col-md-4 control-label" for="autopoke">Auto Poke</label>
+		<div class="col-md-4">
+			<select id="autopoke" class="form-control">
+				<option value="0" selected>Disabled</option>
+				<option value="5">5 minutes</option>
+				<option value="10">10 minutes</option>
+				<option value="30">30 minutes</option>
+			</select>
+
+			<span class="help-block">
+				How often to automatically poke yourself as online for
+				<code>poe.trade</code>
+			</span>
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label class="col-md-4 control-label" for="autopoke-url">Auto Poke URL</label>
+		<div class="col-md-4">
+			<input id="autopoke-url" type="text" class="form-control">
+
+			<span class="help-block">
+				The URL sent to you by <code>poe.trade</code> to mark yourself as
+				online. By default this will be grabbed from your message box.
+			</span>
+		</div>
+	</div>
+
+	<div class="form-group">
 		<label class="col-md-4 control-label" for="checkboxes">Stash Tabs</label>
 
 		<div class="col-md-4">
